worked on creating the view container for class object as well as building out backend for removing classes adding classes

--- a/app/src/main/res/layout/activity_select_class.xml
+++ b/app/src/main/res/layout/activity_select_class.xml
@@ -66,4 +66,16 @@
         android:layout_marginTop="@dimen/_12sdp"
         android:background="@color/moss_green"
         app:layout_constraintTop_toBottomOf="@id/imageBack"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/studentClassRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        android:padding="@dimen/_20sdp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@id/viewSupporter"
+        app:layout_constraintTop_toBottomOf="@id/viewSupporter"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
