--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/moss_green"
+    android:theme="@style/Theme.StudyGo"
     tools:context=".activities.ui.home.HomeFragment">
 
 
