--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -4,28 +4,28 @@
     android:id="@+id/container_student"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/AppTheme"
-    >
+    android:theme="@style/AppTheme">
     <!-- Toolbar at the top with a Spinner -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_student"
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
-        app:layout_constraintTop_toTopOf="parent"
+        android:background="?attr/colorPrimary"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="?attr/colorPrimary"
+        app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imageInfo"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
+            android:layout_gravity="end"
             android:layout_marginEnd="@dimen/_16sdp"
             android:padding="@dimen/_4sdp"
             android:src="@drawable/ic_menu_book"
-            android:tint="@color/white"
-            android:layout_gravity="end"/>
+            android:tint="@color/white" />
+
 
     </androidx.appcompat.widget.Toolbar>
 
@@ -35,8 +35,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:theme="@style/Theme.StudyGo"
         android:background="?android:attr/windowBackground"
+        android:theme="@style/Theme.StudyGo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -49,10 +49,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:defaultNavHost="true"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_student"
         app:layout_constraintBottom_toTopOf="@id/nav_view_student"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_student"
         app:navGraph="@navigation/mobile_navigation_student" />
 
 
