--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -8,7 +8,7 @@
     android:overScrollMode="never"
     android:padding="@dimen/_24sdp"
     android:scrollbars="none"
-    android:background="@color/beige">
+    android:background="@color/dark_grey">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_20sdp"
             android:text="@string/create_new_account"
-            android:textColor="@color/eerie_black"
+            android:textColor="@color/white"
             android:textSize="@dimen/_18ssp"
             android:textStyle="bold"/>
         <FrameLayout
@@ -58,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/professor"
-                android:textColor="@color/primary_text"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_13ssp" />
 
             <RadioButton
@@ -66,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/student"
-                android:textColor="@color/primary_text"
+                android:textColor="@color/white"
                 android:layout_marginStart="@dimen/_16sdp"
                 android:textSize="@dimen/_13ssp" />
             <RadioButton
@@ -74,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/company"
-                android:textColor="@color/primary_text"
+                android:textColor="@color/white"
                 android:layout_marginStart="@dimen/_16sdp"
                 android:textSize="@dimen/_13ssp" />
         </RadioGroup>
@@ -172,7 +172,7 @@
             android:layout_marginTop="@dimen/_10sdp"
             android:text="@string/already_have_an_account_login"
             android:textStyle="bold"
-            android:textColor="@color/primary"
+            android:textColor="@color/white"
             android:textSize="@dimen/_13ssp"
             />
 
