--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,6 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFF</color>
     <color name="primary">#1C2E46</color>
     <color name="primary_dark">#142232</color>
     <color name="primary_text">#212121</color>
@@ -15,11 +14,13 @@
     <color name="icon_background">#20FFFFFF</color>
     <color name="error">#B00020</color>
     <color name="recieved_message_background">#090D16</color>
-    <color name="baby_powder">#F7F7F2</color>
+    <color name="white">#F7F7F2</color>
     <color name="beige">#E4E6C3</color>
-    <color name="moss_green">#899878</color>
+<!--    <color name="moss_green">#899878</color>-->
     <color name="eerie_black">#222725</color>
+    <color name="lighter_grey">#444</color>
     <color name="night">#121113</color>
-
-
+    <color name="dark_grey">#2c2c2c</color>
+    <color name="gold_button">#FFD700</color>
+    <color name="moss_green">#121113</color>
 </resources>
